Don't show fixture textareas
We really don't need to see tons of textareas with fixtures in
them so it's better to hide those elements. No need to explicitly
hide <script> elements because they are not visible anyway.

--- a/src/webui/webui.css
+++ b/src/webui/webui.css
@@ -36,3 +36,6 @@ div.footer {
 	text-align: center;
 	margin-top: 100px;
 }
+
+/* Don't show fixture elements */
+textarea { display: none; }
